grammar.txt
program     -> pck import* clDecl

pck         -> "package" VAR_TYPE ";"
import      -> "import" VAR_TYPE ("as" IDENTIFIER)? ";"

clDecl      -> interfaceDecl | classDecl | enumDecl | annotationDecl
interfaceDecl -> "interface" IDENTIFIER ( "extends" VAR_TYPE ( "," VAR_TYPE )* )? "{" (funcDecl | varDecl)* "}"
classDecl   -> "class" IDENTIFIER ( "extends" VAR_TYPE )? ( "implements" VAR_TYPE ( "," VAR_TYPE)* )? "{" (funcDecl | varDecl)* "}"
enumDecl    -> "enum" IDENTIFIER ( "implements" VAR_TYPE ( "," VAR_TYPE )* )
annotationDecl -> "annotation" IDENTIFIER "{" annotationFuncDecl* "}"

declaration -> varDecl | statement

funcDecl    -> "static"? "default"? "final"? VAR_TYPE IDENTIFIER "(" parameters? ")" block
annotationFuncDecl -> VAR_TYPE IDENTIFIER "(" ")" ("default" literal)?
fieldDecl   -> "static"? varDecl;
varDecl     -> "final"? VAR_TYPE IDENTIFIER ( "=" expression )? ";"

statement   -> exprStmt | forStmt | ifStmt | tryStmt | thrStmt | returnStmt | whileStmt | block
exprStmt    -> switch | call | assignment ";"
forStmt     -> forIStmt | forEachStmt

forEachStmt -> "for" "(" VAR_TYPE IDENTIFIER ":" expression ")" statement
forIStmt    -> "for" "(" ( varDecl | exprStmt)? ";" expression? ";" expression? ")" statement

ifStmt      -> "if" "(" expression ")" statement ( "elif" "(" expression ")" statement )* ( "else" statement )?
tryStmt     -> "try" "{" statement* "}" ( ( "catch" "(" VAR_TYPE ( "|" VAR_TYPE )* IDENTIFIER ")" "{" statement* "}" ) | ("finally" "{" statement* "}"
thrStmt     -> "throw" expression ";"
returnStmt  -> "return" expression? ";"
whileStmt   -> "while" "(" expression ")" statement
block       -> "{" statement* "}"

expression  -> switch | when;

switch      -> "switch" "(" expression ")" "{" ( "case" primary "->" expression ";")* ("default" "->" expression ";")? "}"

when        -> cast_check ( "?" expression ":" expression )?

cast_check  -> assignment ( "instanceof" VAR_TYPE IDENTIFIER? )?

assignment  -> ( ( call "." )? IDENTIFIER "=" assignment ) | logic_or

logic_or    -> logic_and ( ("or" | "||") logic_and )*
logic_and   -> equality ( ("and" | "&&") equality )*
equality    -> comparison ( ( "!=" | "==" ) comparison )*
comparison  -> term ( ( ">" | ">=" | "<" | "<=" ) term )*
term        -> factor ( ( "-" | "+" ) factor )*
factor      -> pow ( "/" | "*" ) pow )*
pow         -> unary ( "**" unary )*

unary       -> (( "!" | "-" ) unary) | call | switch | constructorHolder

call        -> primary ( "(" arguments? ")" | "." IDENTIFIER )*
constructorHolder -> "new" VAR_TYPE "(" arguments? ")"

primary     -> literal | "(" expression ")" | "super" "." IDENTIFIER
literal     -> "true" | "false" | "null" | "this" | NUMBER | STRING | IDENTIFIER

//util
parameters  -> VAR_TYPE IDENTIFIER ( "," VAR_TYPE IDENTIFIER )*
arguments   -> expression ( "," expression )*
genericType -> IDENTIFIER (("extends" VAR_TYPE) | ("super" VAR_TYPE))?
generics    -> "<" genericType ("," genericType)* ">"
genericDecl -> "<" IDENTIFIER ("," IDENTIFIER)* ">"

//lexical
NUMBER      -> DIGIT ( "." DIGIT )?
STRING      -> "\"" <any char except "\"">* "\""
IDENTIFIER  -> ALPHA ( ALPHA | DIGIT )*
ALPHA       -> [a-zA-Z_]+
DIGIT       -> [0-9]+
VAR_TYPE    -> IDENTIFIER ("." IDENTIFIER)*
